--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed Jun 15 11:28:37 CEST 2022
-sdk.dir=/var/jenkins_home/tools/android_sdk
+sdk.dir=C\:\\Users\\melanie.backers\\AppData\\Local\\Android\\Sdk
